force-app/main/default/objects/CS_SelezioneFornitura__c/CS_SelezioneFornitura__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>CS che contiene le varie parametrizzazioni della capabilities Selezione Fornitura</description>
    <label>SelezioneFornitura</label>
</CustomObject>