force-app/main/default/objects/CS_SelezioneFornitura__c/fields/Field_Required_Generic__c.field-meta.xml
<CustomField>
    <fullName>Field_Required_Generic__c</fullName>
    <label>Field Required Generic</label>
    <type>TextArea</type>
</CustomField>