force-app/main/default/objects/CS_SelezioneFornitura__c/fields/FieldHeating__c.field-meta.xml
<CustomField>
    <fullName>FieldHeating__c</fullName>
    <description>elenco campi necessari alla creazione di un Service Point Teleriscaldamento</description>
    <label>FieldTeleRisc</label>
    <type>TextArea</type>
</CustomField>