force-app/main/default/objects/CS_SelezioneFornitura__c/fields/FieldRequiredAddress__c.field-meta.xml
<CustomField>
    <fullName>FieldRequiredAddress__c</fullName>
    <label>Field Required Indirizzo</label>
    <type>TextArea</type>
</CustomField>