force-app/main/default/objects/CS_SelezioneFornitura__c/fields/FieldRequiredEle__c.field-meta.xml
<CustomField>
    <fullName>FieldRequiredEle__c</fullName>
    <label>Field Required Ele</label>
    <type>TextArea</type>
</CustomField>