force-app/main/default/objects/CS_SelezioneFornitura__c/fields/FieldRequiredGas__c.field-meta.xml
<CustomField>
    <fullName>FieldRequiredGas__c</fullName>
    <label>Field Required Gas</label>
    <type>TextArea</type>
</CustomField>