force-app/main/default/objects/CS_SelezioneFornitura__c/fields/FieldRequiredWaste__c.field-meta.xml
<CustomField>
    <fullName>FieldRequiredWaste__c</fullName>
    <label>Field Required Waste</label>
    <type>TextArea</type>
</CustomField>