force-app/main/default/objects/CS_SelezioneFornitura__c/fields/FieldWater__c.field-meta.xml
<CustomField>
    <fullName>FieldWater__c</fullName>
    <description>elenco campi necessari alla creazione di un Service Point acqua</description>
    <label>Field Acqua</label>
    <type>TextArea</type>
</CustomField>