force-app/main/default/objects/CS_SelezioneFornitura__c/fields/Max_Record__c.field-meta.xml
<CustomField>
    <fullName>Max_Record__c</fullName>
    <description>Numero massimo di record estraibili dalla ricerca</description>
    <label>Max Record</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>