force-app/main/default/objects/CS_SelezioneFornitura__c/fields/Output_Contract__c.field-meta.xml
<CustomField>
    <fullName>Output_Contract__c</fullName>
    <description>elenco di campi da mostrare a valle della ricerca in caso ti targetObject Contratto</description>
    <label>Output Contratto</label>
    <type>TextArea</type>
</CustomField>