force-app/main/default/objects/CS_SelezioneFornitura__c/fields/OutputServicePoint__c.field-meta.xml
<CustomField>
    <fullName>OutputServicePoint__c</fullName>
    <description>elenco di campi da mostrare a valle della ricerca in caso ti targetObject fornitura</description>
    <label>Output Fornitura</label>
    <type>TextArea</type>
</CustomField>